backend part functioning for getUserProfile